# esp_person_detection

./: readme.md
components/bus/: i2s_lcd_esp32_driver.c
examples/person_detection/: CMakeLists.txt
examples/person_detection/main/: CMakeLists.txt  app_camera_esp.c  esp_node_defines.h  image_processing.c  image_processing.h  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h  networking.c
